feat: 新增测试验证维度并移除英文独立副本
- javafx-runner 新增 Test Verification 维度与 test-verification.md 参考文档
- javafx-developer 新增 TestFX 测试模板（主窗口/控制器/ViewModel/CRUD 集成测试）
- 移除三个 -en 英文独立技能副本，统一以中文版为主
- 同步更新三技能的 SKILL/EVALUATE/references 内容